# gan

./: .pdm-python  .pre-commit-config.yaml  README.md  pyproject.toml  runTests.sh
src/: agents.py  gan_launcher.py  untitled.py
src/gan/: digits.py  discriminator.py  discriminator.py   generator.py  launcher.py  scratch.py
tests/: test_general.py
